--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "homepage": "https://github.com/mherb63/netconfjs-meh#readme",
   "dependencies": {
+    "lzutf8": "^0.6.3",
     "npm-packlist": "^7.0.4",
     "ssh2": "^1.11.0",
     "vasync": "^2.2.1",
+    "xml-formatter": "^3.2.0",
     "xml2js": "^0.4.23"
   }
 }
